update style for overflow issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,7 +39,9 @@ body, html{height: 100%;}
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	overflow: visible;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
 }
 
 
